--- a/components/NotifRequest/notifrequest.module.css
+++ b/components/NotifRequest/notifrequest.module.css
@@ -1,8 +1,7 @@
 .section{
   width: 100%;
   height: 100vh;
-  background-color: var(--secondary0);
-  backdrop-filter: blur(20px);
+  background-color: var(--secondary);
   color: var(--foreground);
   display: grid;
   place-items: center;
