--- a/components/Video/video.module.css
+++ b/components/Video/video.module.css
@@ -7,7 +7,6 @@
   margin-top: 50px;
   margin-bottom: 40px;
   background-color: rgba(255, 255, 255, .1);
-  backdrop-filter: blur(20px);
 }
 .player{
   width: 100%;
@@ -30,8 +29,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, .95);
-  backdrop-filter: blur(20px);
+  background-color: rgb(0, 0, 0);
 }
 .hide::before{
   content: 'La clase ha terminado, presiona el boton para ir a la siguiente clase';
