--- a/components/VisitCounter/visitcounter.module.css
+++ b/components/VisitCounter/visitcounter.module.css
@@ -10,7 +10,7 @@
   left: 15px;
   display: flex;
   align-items: center;
-  background-color: rgba(255, 255, 255, .2);
+  background-color: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(8px) brightness(.4);
   width: fit-content;
   padding: 3px 10px 3px 4px;
