--- a/components/LastStep/laststep.module.css
+++ b/components/LastStep/laststep.module.css
@@ -3,8 +3,7 @@
   min-height: 240px;
   max-width: 500px;
   margin: 0 auto;
-  opacity: 0;
-  animation: fade 2.5s ease forwards;
+  text-align: center;
 }
 .title{
   font-size: 19px;
@@ -26,6 +25,7 @@
   display: block;
   margin: 0 auto;
   animation: box 2.5s ease infinite;
+  -webkit-tap-highlight-color: transparent;
   cursor: pointer;
 }
 
@@ -34,8 +34,6 @@
   min-height: 230px;
   max-width: 500px;
   margin: 0 auto;
-  opacity: 0;
-  animation: fade 2.5s ease forwards;
 }
 .cont_f p {
   font-size: 18px;
@@ -44,8 +42,6 @@
 }
 .t2{
   margin-top: 20px;
-  opacity: 0;
-  animation: fade 2.5s 2.5s ease forwards;
   margin-bottom: 30px;
 }
 .t2 strong{
@@ -58,8 +54,7 @@
   overflow: hidden;
   width: 300px;
   margin: 0 auto;
-  opacity: 0;
-  animation: fade 2.5s 5s ease forwards, wobble 2.5s 1s ease infinite;
+  animation: wobble 2.5s 1s ease infinite;
   cursor: pointer;
 }
 .price span{
@@ -88,12 +83,6 @@
   50% { transform: rotate(8deg) scale(1.05); }
   70% { transform: rotate(0deg) scale(1.05); }
   100% { transform: scale(1); }
-}
-
-@keyframes fade {
-  to{
-    opacity: 1
-  }
 }
 
 @keyframes wobble {
