--- a/components/NexLesson/nextlesson.module.scss
+++ b/components/NexLesson/nextlesson.module.scss
@@ -1,10 +1,3 @@
-.cont{
-  width: 92%;
-  max-width: 420px;
-  margin: 0 auto;
-  position: relative;
-  min-height: 240px;
-}
 .title{
   text-align: center;
   margin-bottom: 20px;
@@ -16,13 +9,10 @@
   background-color: rgba(255, 255, 255, 0.1);
   overflow: hidden;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
   display: grid;
   grid-template-columns: 3fr 4fr;
   margin-bottom: 20px;
-  img, .lockicon, .button_text{
-    opacity: .6;
-    transition: opacity 1s ease;
-  }
   picture{
     height: 100%;
     position: relative;
@@ -33,15 +23,6 @@
     height: 100%;
     aspect-ratio: 16/9;
     object-fit: cover;
-  }
-}
-.unlock{
-  animation: wobble 2.5s 1s ease infinite;
-  img, .button_text{
-    opacity: 1;
-  }
-  .lockicon{
-    opacity: 0;
   }
 }
 
@@ -71,14 +52,5 @@
   text-align: center;
   font-size: 16px;
   font-weight: 300;
-}
-
-@keyframes wobble {
-  0% { transform: translateX(0%); }
-  10% { transform: translateX(-5px); }
-  20% { transform: translateX(4px); }
-  30% { transform: translateX(-3px); }
-  40% { transform: translateX(2px); }
-  50% { transform: translateX(0); }
-  100% { transform: translateX(0); }
+  opacity: .9;
 }
