--- a/pages/registrarme-ahora/styles/_2Present.scss
+++ b/pages/registrarme-ahora/styles/_2Present.scss
@@ -1,33 +1,32 @@
 .present{
+  color: var(--foreground);
   width: 92%;
   max-width: 1080px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  text-align: center;
   padding: 30px 0 60px 0;
   h1{
     font-size: 24px;
     font-weight: 800;
-    text-align: center;
-    order: 1;
     margin: 0 auto 20px auto;
     max-width: 550px;
+    order: 1;
     strong{
-      color: $primary;
+      color: var(--primary);
     }
   }
   &_p{
     font-size: 17px;
     font-weight: 300;
-    text-align: center;
-    order: 2;
     max-width: 500px;
     margin: 0 auto 25px auto;
+    order: 2;
   }
   &_cont{
     order: 3;
     p{
-      text-align: center;
       font-weight: 400;
       font-size: 17px;
       width: 95%;
@@ -35,7 +34,7 @@
     }
     button{
       width: 100%;
-      background-color: $primary;
+      background-color: var(--primary);
       border-radius: 10px;
       font-size: 18px;
       font-weight: 700;
