improve layout shift

--- a/pages/registrarme-ahora/styles/_2Present.scss
+++ b/pages/registrarme-ahora/styles/_2Present.scss
@@ -52,6 +52,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    aspect-ratio: 16/9;
     &_icon{
       width: 70px;
       height: 70px;
