--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,7 @@
   --foreground: #EDEDED;
 }
 body{
-  font-family: Poppins;
+  font-family: Poppins,-apple-system,BlinkMacSystemFont,Roboto,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
